--- a/applications.html
+++ b/applications.html
@@ -37,7 +37,7 @@
        <div class="row">
          <div class="large-12 columns">
             <p>Ajay here Changed the page </p><br/>
-            <p>Check out our <a href="https://www.apachefriends.org/bitnami_for_xampp.html" target="_blank" >Bitnami for XAMPP Start Guide</a> for more information about the applications installed.</p>
+            <p>Check out our <a href="https://www.apachefriends.org/bitnami_for_xampp.html" target="_blank" >HEllo Again Edited!!!!</p>
          </div>
        </div>
     </div>
